// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Default 1`] = `
<div
  id="app"
>
  <svgsprite />
   
  <header
    class=""
  >
    <section
      class=""
      id="drawer"
    >
      <div
        id="bar"
      >
        <button
          id="menu-btn"
        >
          <img
            alt="menu"
            src=""
          />
        </button>
      </div>
       
      <div
        id="drop-container"
        style="display: none;"
      >
        <div
          id="anchor"
        >
          <span
            class="social"
          >
            <a
              href="https://www.facebook.com/xrgbmusic"
              id="facebook"
              target="_blank"
            >
              <img
                alt="facebook"
                src=""
              />
            </a>
            <a
              href="https://www.soundcloud.com/xrgbmusic"
              id="soundcloud"
              target="_blank"
            >
              <img
                alt="soundcloud"
                src=""
              />
            </a>
            <a
              href="https://www.instagram.com/xrgb_music"
              id="instagram"
              target="_blank"
            >
              <img
                alt="instagram"
                src=""
              />
            </a>
            <a
              href="https://xrgb.bandcamp.com/"
              id="bandcamp"
              target="_blank"
            >
              <img
                alt="bandcamp"
                src=""
              />
            </a>
            <a
              href="mailto:xrgb.music@gmail.com"
              id="email"
              target="_blank"
            >
              <img
                alt="email"
                src=""
              />
            </a>
          </span>
        </div>
         
        <ul
          id="drawer-content"
        >
          <li>
            <a
              href="#latest"
            >
              Latest
            </a>
          </li>
          <li>
            <a
              href="#singles"
            >
              Singles
            </a>
          </li>
          <li>
            <a
              href="#albums"
            >
              Albums
            </a>
          </li>
          <li>
            <a
              href="#about"
            >
              About
            </a>
          </li>
          <li>
            <a
              href="#/"
            >
              Home
            </a>
          </li>
        </ul>
         
        <svg
          class=""
          height="10.720881"
          id="arrow"
          viewBox="0 0 50.405514 10.72088"
          width="50.405514"
        >
          <g
            id="layer1"
            transform="translate(0.20025753,-11.399707)"
          >
            <path
              d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
              id="arrow-path"
              style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: #d11d66;"
            />
          </g>
        </svg>
      </div>
    </section>
     
    <span
      class="social"
      id="desktop-social"
    >
      <a
        href="https://www.facebook.com/xrgbmusic"
        id="facebook"
        target="_blank"
      >
        <img
          alt="facebook"
          src=""
        />
      </a>
      <a
        href="https://www.soundcloud.com/xrgbmusic"
        id="soundcloud"
        target="_blank"
      >
        <img
          alt="soundcloud"
          src=""
        />
      </a>
      <a
        href="https://www.instagram.com/xrgb_music"
        id="instagram"
        target="_blank"
      >
        <img
          alt="instagram"
          src=""
        />
      </a>
      <a
        href="https://xrgb.bandcamp.com/"
        id="bandcamp"
        target="_blank"
      >
        <img
          alt="bandcamp"
          src=""
        />
      </a>
      <a
        href="mailto:xrgb.music@gmail.com"
        id="email"
        target="_blank"
      >
        <img
          alt="email"
          src=""
        />
      </a>
    </span>
     
    <section
      id="xrgb"
    >
      <div
        id="xrgb-container"
      >
        <svg
          id="Layer_1"
          style="enable-background: new 0 0 624 202.8;"
          version="1.1"
          viewBox="0 0 624 202.8"
          x="0px"
          xml:space="preserve"
          y="0px"
        >
          <g>
            <g>
              <path
                class="st0"
                d="M123.75,191.95H88.92l-25.13-32.93l-25.05,32.93H3.93l42.47-55.81L3.68,79.91h34.75l25.35,33.34l24.97-33.34
			h34.58l-42.17,56.24L123.75,191.95z M90.95,187.5h24.01l-39.2-51.32l38.87-51.84H90.81l-27.03,36.06L36.4,84.33H12.45l39.36,51.82
			L12.72,187.5H36.7l27.08-35.57L90.95,187.5z"
              />
            </g>
             
            <g
              id="main"
            >
              <path
                class="st0"
                d="M284.2,192.65h-50.65l-39.6-65.29h-6.81v65.29h-44.19V17.51h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L284.2,192.65z M236.45,188.02
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L236.45,188.02z M212.25,91.07h-30.1V53.8h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C219.02,90.23,215.79,91.07,212.25,91.07z M187.14,86.45h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89h-25.11V86.45z"
              />
            </g>
             
            <g
              id="shadow"
            >
              <path
                class="st0"
                d="M372.24,198.08c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.7,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V92.78c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C422.82,188.61,398.83,198.08,372.24,198.08z M372.01,18.77
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V95.3h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C417.72,27.33,401.35,18.77,372.01,18.77z"
              />
            </g>
             
            <g>
              <path
                class="st0"
                d="M547.26,193.05h-80.01V17.92h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C562.75,191.64,555.15,193.05,547.26,193.05z M472.25,188.43
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.88-20.83-3.88h-75.01V188.43z M547.26,156.85h-40.82V54.12h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C554.06,156.05,550.82,156.85,547.26,156.85z M511.44,152.23h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78h-35.82V152.23z"
              />
            </g>
          </g>
           
          <g>
            <g>
              <path
                class="st1"
                d="M133.81,183.26H98.98l-25.13-32.93l-25.05,32.93h-34.8l42.47-55.81L13.74,71.21h34.75l25.35,33.34
			l24.97-33.34h34.58l-42.17,56.24L133.81,183.26z M101.01,178.8h24.01l-39.2-51.32l38.87-51.84h-23.82l-27.03,36.06L46.46,75.63
			H22.5l39.36,51.82L22.78,178.8h23.98l27.08-35.57L101.01,178.8z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M294.25,183.95H243.6L204,118.66h-6.81v65.29h-44.19V8.81h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L294.25,183.95z M246.51,179.32
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L246.51,179.32z M222.3,82.37h-30.1V45.1h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C229.08,81.53,225.84,82.37,222.3,82.37z M197.2,77.75h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89H197.2V77.75z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M382.3,189.38c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.69,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V84.08c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C432.88,179.91,408.89,189.38,382.3,189.38z M382.07,10.07
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V86.6h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C427.77,18.63,411.41,10.07,382.07,10.07z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M557.32,184.35h-80.01V9.22h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C572.8,182.94,565.21,184.35,557.32,184.35z M482.31,179.73
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.87-20.83-3.87h-75.01V179.73z M557.32,148.15H516.5V45.42h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C564.12,147.35,560.88,148.15,557.32,148.15z M521.5,143.53h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78H521.5V143.53z"
              />
            </g>
          </g>
        </svg>
      </div>
    </section>
  </header>
   
  <div
    class=""
    id="container"
  >
    <router-view
      id="home-nav"
      name="homenav"
    />
     
    <section
      id="sidebar"
    >
      <nav>
        <ul>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#latest"
              >
                
    Latest
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#singles"
              >
                
    Singles
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#albums"
              >
                
    Albums
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#about"
              >
                
    About
  
              </router-link>
            </div>
          </li>
        </ul>
      </nav>
    </section>
     
    <section
      id="content"
    >
      <router-view
        scroll-position="0"
      />
    </section>
  </div>
</div>
`;

exports[`Storyshots App Scrolling 1`] = `
<div
  id="app"
  isscrolling="true"
>
  <svgsprite />
   
  <header
    class=""
  >
    <section
      class=""
      id="drawer"
    >
      <div
        id="bar"
      >
        <button
          id="menu-btn"
        >
          <img
            alt="menu"
            src=""
          />
        </button>
      </div>
       
      <div
        id="drop-container"
        style="display: none;"
      >
        <div
          id="anchor"
        >
          <span
            class="social"
          >
            <a
              href="https://www.facebook.com/xrgbmusic"
              id="facebook"
              target="_blank"
            >
              <img
                alt="facebook"
                src=""
              />
            </a>
            <a
              href="https://www.soundcloud.com/xrgbmusic"
              id="soundcloud"
              target="_blank"
            >
              <img
                alt="soundcloud"
                src=""
              />
            </a>
            <a
              href="https://www.instagram.com/xrgb_music"
              id="instagram"
              target="_blank"
            >
              <img
                alt="instagram"
                src=""
              />
            </a>
            <a
              href="https://xrgb.bandcamp.com/"
              id="bandcamp"
              target="_blank"
            >
              <img
                alt="bandcamp"
                src=""
              />
            </a>
            <a
              href="mailto:xrgb.music@gmail.com"
              id="email"
              target="_blank"
            >
              <img
                alt="email"
                src=""
              />
            </a>
          </span>
        </div>
         
        <ul
          id="drawer-content"
        >
          <li>
            <a
              href="#latest"
            >
              Latest
            </a>
          </li>
          <li>
            <a
              href="#singles"
            >
              Singles
            </a>
          </li>
          <li>
            <a
              href="#albums"
            >
              Albums
            </a>
          </li>
          <li>
            <a
              href="#about"
            >
              About
            </a>
          </li>
          <li>
            <a
              href="#/"
            >
              Home
            </a>
          </li>
        </ul>
         
        <svg
          class=""
          height="10.720881"
          id="arrow"
          viewBox="0 0 50.405514 10.72088"
          width="50.405514"
        >
          <g
            id="layer1"
            transform="translate(0.20025753,-11.399707)"
          >
            <path
              d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
              id="arrow-path"
              style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: #d11d66;"
            />
          </g>
        </svg>
      </div>
    </section>
     
    <span
      class="social"
      id="desktop-social"
    >
      <a
        href="https://www.facebook.com/xrgbmusic"
        id="facebook"
        target="_blank"
      >
        <img
          alt="facebook"
          src=""
        />
      </a>
      <a
        href="https://www.soundcloud.com/xrgbmusic"
        id="soundcloud"
        target="_blank"
      >
        <img
          alt="soundcloud"
          src=""
        />
      </a>
      <a
        href="https://www.instagram.com/xrgb_music"
        id="instagram"
        target="_blank"
      >
        <img
          alt="instagram"
          src=""
        />
      </a>
      <a
        href="https://xrgb.bandcamp.com/"
        id="bandcamp"
        target="_blank"
      >
        <img
          alt="bandcamp"
          src=""
        />
      </a>
      <a
        href="mailto:xrgb.music@gmail.com"
        id="email"
        target="_blank"
      >
        <img
          alt="email"
          src=""
        />
      </a>
    </span>
     
    <section
      id="xrgb"
    >
      <div
        id="xrgb-container"
      >
        <svg
          id="Layer_1"
          style="enable-background: new 0 0 624 202.8;"
          version="1.1"
          viewBox="0 0 624 202.8"
          x="0px"
          xml:space="preserve"
          y="0px"
        >
          <g>
            <g>
              <path
                class="st0"
                d="M123.75,191.95H88.92l-25.13-32.93l-25.05,32.93H3.93l42.47-55.81L3.68,79.91h34.75l25.35,33.34l24.97-33.34
			h34.58l-42.17,56.24L123.75,191.95z M90.95,187.5h24.01l-39.2-51.32l38.87-51.84H90.81l-27.03,36.06L36.4,84.33H12.45l39.36,51.82
			L12.72,187.5H36.7l27.08-35.57L90.95,187.5z"
              />
            </g>
             
            <g
              id="main"
            >
              <path
                class="st0"
                d="M284.2,192.65h-50.65l-39.6-65.29h-6.81v65.29h-44.19V17.51h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L284.2,192.65z M236.45,188.02
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L236.45,188.02z M212.25,91.07h-30.1V53.8h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C219.02,90.23,215.79,91.07,212.25,91.07z M187.14,86.45h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89h-25.11V86.45z"
              />
            </g>
             
            <g
              id="shadow"
            >
              <path
                class="st0"
                d="M372.24,198.08c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.7,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V92.78c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C422.82,188.61,398.83,198.08,372.24,198.08z M372.01,18.77
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V95.3h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C417.72,27.33,401.35,18.77,372.01,18.77z"
              />
            </g>
             
            <g>
              <path
                class="st0"
                d="M547.26,193.05h-80.01V17.92h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C562.75,191.64,555.15,193.05,547.26,193.05z M472.25,188.43
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.88-20.83-3.88h-75.01V188.43z M547.26,156.85h-40.82V54.12h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C554.06,156.05,550.82,156.85,547.26,156.85z M511.44,152.23h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78h-35.82V152.23z"
              />
            </g>
          </g>
           
          <g>
            <g>
              <path
                class="st1"
                d="M133.81,183.26H98.98l-25.13-32.93l-25.05,32.93h-34.8l42.47-55.81L13.74,71.21h34.75l25.35,33.34
			l24.97-33.34h34.58l-42.17,56.24L133.81,183.26z M101.01,178.8h24.01l-39.2-51.32l38.87-51.84h-23.82l-27.03,36.06L46.46,75.63
			H22.5l39.36,51.82L22.78,178.8h23.98l27.08-35.57L101.01,178.8z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M294.25,183.95H243.6L204,118.66h-6.81v65.29h-44.19V8.81h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L294.25,183.95z M246.51,179.32
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L246.51,179.32z M222.3,82.37h-30.1V45.1h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C229.08,81.53,225.84,82.37,222.3,82.37z M197.2,77.75h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89H197.2V77.75z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M382.3,189.38c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.69,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V84.08c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C432.88,179.91,408.89,189.38,382.3,189.38z M382.07,10.07
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V86.6h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C427.77,18.63,411.41,10.07,382.07,10.07z"
              />
            </g>
             
            <g>
              <path
                class="st1"
                d="M557.32,184.35h-80.01V9.22h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C572.8,182.94,565.21,184.35,557.32,184.35z M482.31,179.73
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.87-20.83-3.87h-75.01V179.73z M557.32,148.15H516.5V45.42h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C564.12,147.35,560.88,148.15,557.32,148.15z M521.5,143.53h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78H521.5V143.53z"
              />
            </g>
          </g>
        </svg>
      </div>
    </section>
  </header>
   
  <div
    class=""
    id="container"
  >
    <router-view
      id="home-nav"
      name="homenav"
    />
     
    <section
      id="sidebar"
    >
      <nav>
        <ul>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#latest"
              >
                
    Latest
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#singles"
              >
                
    Singles
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#albums"
              >
                
    Albums
  
              </router-link>
            </div>
          </li>
          <li>
            <div
              class=""
            >
              <router-link
                append=""
                to="#about"
              >
                
    About
  
              </router-link>
            </div>
          </li>
        </ul>
      </nav>
    </section>
     
    <section
      id="content"
    >
      <router-view
        scroll-position="0"
      />
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Basic Button Primary 1`] = `
<button>
  <span
    id="basic-button-text"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Components/Icons/SVGIcon Primary 1`] = `
<svg
  class="icon"
  height="16"
  width="16"
>
  <use
    xlink:href="#undefined"
  />
</svg>
`;

exports[`Storyshots Content Default 1`] = `
<article
  class="content-container"
  title="title"
>
  <h2>
    
  </h2>
   hi 
</article>
`;

exports[`Storyshots Drawer Default 1`] = `
<section
  class=""
  id="drawer"
>
  <div
    id="bar"
  >
    <button
      id="menu-btn"
    >
      <img
        alt="menu"
        src=""
      />
    </button>
  </div>
   
  <div
    id="drop-container"
    style="display: none;"
  >
    <div
      id="anchor"
    />
     
    <ul
      id="drawer-content"
    >
      <li>
        <a
          href="#undefined"
        >
          link one
        </a>
      </li>
    </ul>
     
    <svg
      class=""
      height="10.720881"
      id="arrow"
      viewBox="0 0 50.405514 10.72088"
      width="50.405514"
    >
      <g
        id="layer1"
        transform="translate(0.20025753,-11.399707)"
      >
        <path
          d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
          id="arrow-path"
          style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: #d11d66;"
        />
      </g>
    </svg>
  </div>
</section>
`;

exports[`Storyshots Drawer Mobile 1`] = `
<section
  class=""
  id="drawer"
>
  <div
    id="bar"
  >
    <button
      id="menu-btn"
    >
      <img
        alt="menu"
        src=""
      />
    </button>
  </div>
   
  <div
    id="drop-container"
    style="display: none;"
  >
    <div
      id="anchor"
    />
     
    <ul
      id="drawer-content"
    >
      <li>
        <a
          href="#undefined"
        >
          link one
        </a>
      </li>
    </ul>
     
    <svg
      class=""
      height="10.720881"
      id="arrow"
      viewBox="0 0 50.405514 10.72088"
      width="50.405514"
    >
      <g
        id="layer1"
        transform="translate(0.20025753,-11.399707)"
      >
        <path
          d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
          id="arrow-path"
          style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: #d11d66;"
        />
      </g>
    </svg>
  </div>
</section>
`;

exports[`Storyshots Drawer Mobile Open 1`] = `
<section
  class="open"
  id="drawer"
>
  <div
    id="bar"
  >
    <button
      id="menu-btn"
    >
      <img
        alt="menu"
        src=""
      />
    </button>
  </div>
   
  <div
    id="drop-container"
  >
    <div
      id="anchor"
    />
     
    <ul
      id="drawer-content"
    >
      <li>
        <a
          href="#undefined"
        >
          link one
        </a>
      </li>
    </ul>
     
    <svg
      class="up"
      height="10.720881"
      id="arrow"
      viewBox="0 0 50.405514 10.72088"
      width="50.405514"
    >
      <g
        id="layer1"
        transform="translate(0.20025753,-11.399707)"
      >
        <path
          d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
          id="arrow-path"
          style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: black;"
        />
      </g>
    </svg>
  </div>
</section>
`;

exports[`Storyshots Drawer Mobile Open With Anchor 1`] = `
<section
  class="open"
  id="drawer"
>
  <div
    id="bar"
  >
    <button
      id="menu-btn"
    >
      <img
        alt="menu"
        src=""
      />
    </button>
  </div>
   
  <div
    id="drop-container"
  >
    <div
      id="anchor"
    />
     
    <ul
      id="drawer-content"
    >
      <li>
        <a
          href="#undefined"
        >
          link one
        </a>
      </li>
    </ul>
     
    <svg
      class="up"
      height="10.720881"
      id="arrow"
      viewBox="0 0 50.405514 10.72088"
      width="50.405514"
    >
      <g
        id="layer1"
        transform="translate(0.20025753,-11.399707)"
      >
        <path
          d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
          id="arrow-path"
          style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: black;"
        />
      </g>
    </svg>
  </div>
</section>
`;

exports[`Storyshots Drawer Scrolling 1`] = `
<section
  class="scrolling"
  id="drawer"
>
  <div
    id="bar"
  >
    <button
      id="menu-btn"
    >
      <img
        alt="menu"
        src=""
      />
    </button>
  </div>
   
  <div
    id="drop-container"
    style="display: none;"
  >
    <div
      id="anchor"
    />
     
    <ul
      id="drawer-content"
    >
      <li>
        <a
          href="#undefined"
        >
          link one
        </a>
      </li>
    </ul>
     
    <svg
      class=""
      height="10.720881"
      id="arrow"
      viewBox="0 0 50.405514 10.72088"
      width="50.405514"
    >
      <g
        id="layer1"
        transform="translate(0.20025753,-11.399707)"
      >
        <path
          d="M 0.3251131,13.32947 25.002499,20.047794 49.679887,13.32947"
          id="arrow-path"
          style="fill: none; fill-opacity: 1; stroke-dasharray: none; stroke-miterlimit: 4; stroke-opacity: 1; stroke-width: 4; stroke: #d11d66;"
        />
      </g>
    </svg>
  </div>
</section>
`;

exports[`Storyshots Link Default 1`] = `
<div
  class=""
>
  <router-link
    append=""
    to="#latest"
  >
    
    The Latest
  
  </router-link>
</div>
`;

exports[`Storyshots Link Selected 1`] = `
<div
  class="selected"
>
  <router-link
    append=""
    to="#latest"
  >
    
    The Latest
  
  </router-link>
</div>
`;

exports[`Storyshots Release Default 1`] = `
<div
  class="release"
>
  <div
    class="cover"
  >
    <div
      class="stream-links release-stream-links overlay-release overlay"
    >
      <!---->
       
      <ul>
        <li>
          <a
            target="_blank"
          >
            <div
              class="stream-link"
            >
              <div
                class="img-container streaming-icon"
              />
              
  
  
              <div
                class="img-container go-arrow"
              >
                <!---->
              </div>
            </div>
          </a>
        </li>
         
        <!---->
      </ul>
    </div>
     
    <div
      class="loading"
    />
     
    <img
      alt="Refraction Cover Art"
      src=""
    />
  </div>
   
  <h3>
    Refraction
  </h3>
</div>
`;

exports[`Storyshots Release Loading 1`] = `
<div
  class="release"
>
  <div
    class="cover"
  >
    <div
      class="stream-links release-stream-links overlay-release overlay"
    >
      <!---->
       
      <ul>
        <li>
          <a
            target="_blank"
          >
            <div
              class="stream-link"
            >
              <div
                class="img-container streaming-icon"
              />
              
  
  
              <div
                class="img-container go-arrow"
              >
                <!---->
              </div>
            </div>
          </a>
        </li>
         
        <!---->
      </ul>
    </div>
     
    <div
      class="loading"
    />
     
    <img
      alt="Refraction Cover Art"
      src=""
    />
  </div>
   
  <h3>
    Refraction
  </h3>
</div>
`;

exports[`Storyshots Sections/About Primary 1`] = `
<div>
  <div
    id="image-container"
  >
    <img
      id="me"
      src=""
    />
  </div>
   
  <p>
    
    Man spends months in a cave alone with his thoughts. Toiling away. Instead of gazing endlessly into fire, or scribing a would-be novel on the walls, he opts to plug in keyboards, pluck a guitar, and pushing some buttons. Self-isolation (hello 2020!) is surreal. It caters to the not-so-subtle nuances of depression and anxiety, but it’s also an invitation to purge creativity. Our cave man, in the face of solitude, decides to painstakingly craft a monolith from years of creative unrest. Out of darkness, comes an ode to a life of love, and, psychedelic experiences.
    
    <br />
     
    <br />
    xRGB is our lead character, and a MI-based multi-instrumentalist. Refraction is his debut album, and the result of years of adequate agonizing. 11 sonic journal entries without the crutch of vocals. We’re dealing with the tug-and-pull of a mind that won’t remain idle. Setting the tone, is an intro track full of vintage samples, skipping through channels on a dusty transistor radio. We’re then thrown into a world of hookless, wandering compositions. Boom-thwap beats akin to celery breaking. A restless mixtape from a bedroom humanoid aching to get on a stage. Yes…HUMAN. More playing. Less spacebar. More strumming. Less laptop. There’s room to breathe here. The guitars chime. The keys are vibrant. The vibes are ready to sample, but never feels safe enough to loop.
    
    <br />
     
    <br />
    So… where do we go from here? Warm head nods during an opening slot for Tycho?…Ratatat?…El Ten Eleven? Light vs. dark nods to 70s film soundtracks a la Goblin? Yes please. Reference points in bio achieved! In the words of the artist himself…”I hope I'm ashamed by this album in a few years compared to whatever I'll be working on then.” Now that xRGB has scratched and clawed his way into immortality via Refraction, let’s book the lad and be a part of his evolution.
  
  </p>
</div>
`;

exports[`Storyshots Sidebar Default 1`] = `
<nav>
  <ul>
    <li>
      <div
        class=""
      >
        <router-link
          append=""
          to="#undefined"
        >
          
    
  
        </router-link>
      </div>
    </li>
    <li>
      <div
        class=""
      >
        <router-link
          append=""
          to="#undefined"
        >
          
    
  
        </router-link>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Sidebar With Selected Section 1`] = `
<nav>
  <ul>
    <li>
      <div
        class=""
      >
        <router-link
          append=""
          to="#undefined"
        >
          
    
  
        </router-link>
      </div>
    </li>
    <li>
      <div
        class=""
      >
        <router-link
          append=""
          to="#undefined"
        >
          
    
  
        </router-link>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Social Links Default 1`] = `
<sociallinks
  links="[object Object],[object Object],[object Object],[object Object],[object Object]"
/>
`;

exports[`Storyshots Stream Link Default 1`] = `
<div
  style="width: 500px; background: rgb(160, 105, 105); height: 300px; padding: 40px;"
>
  <div
    class="stream-link"
    iconpath="Icon awesome-spotify.png"
    link="joe.com"
  >
    <div
      class="img-container streaming-icon"
    />
    
  Spotify
  
    <div
      class="img-container go-arrow"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Stream Links Default 1`] = `
<div
  class="stream-links"
  open="open"
  style="margin: 20px;"
>
  <!---->
   
  <ul>
    <li>
      <a
        aria-label="Spotify"
        href="joe.com"
        target="_blank"
      >
        <div
          class="stream-link"
        >
          <div
            class="img-container streaming-icon"
          />
          
  Spotify
  
          <div
            class="img-container go-arrow"
          >
            <!---->
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-label="Spotify"
        href="joe.com"
        target="_blank"
      >
        <div
          class="stream-link"
        >
          <div
            class="img-container streaming-icon"
          />
          
  Spotify
  
          <div
            class="img-container go-arrow"
          >
            <!---->
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-label="Spotify"
        href="joe.com"
        target="_blank"
      >
        <div
          class="stream-link"
        >
          <div
            class="img-container streaming-icon"
          />
          
  Spotify
  
          <div
            class="img-container go-arrow"
          >
            <!---->
          </div>
        </div>
      </a>
    </li>
     
    <!---->
  </ul>
</div>
`;

exports[`Storyshots xRGB Logo Default 1`] = `
<section
  id="xrgb"
>
  <div
    id="xrgb-container"
  >
    <svg
      id="Layer_1"
      style="enable-background: new 0 0 624 202.8;"
      version="1.1"
      viewBox="0 0 624 202.8"
      x="0px"
      xml:space="preserve"
      y="0px"
    >
      <g>
        <g>
          <path
            class="st0"
            d="M123.75,191.95H88.92l-25.13-32.93l-25.05,32.93H3.93l42.47-55.81L3.68,79.91h34.75l25.35,33.34l24.97-33.34
			h34.58l-42.17,56.24L123.75,191.95z M90.95,187.5h24.01l-39.2-51.32l38.87-51.84H90.81l-27.03,36.06L36.4,84.33H12.45l39.36,51.82
			L12.72,187.5H36.7l27.08-35.57L90.95,187.5z"
          />
        </g>
         
        <g
          id="main"
        >
          <path
            class="st0"
            d="M284.2,192.65h-50.65l-39.6-65.29h-6.81v65.29h-44.19V17.51h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L284.2,192.65z M236.45,188.02
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L236.45,188.02z M212.25,91.07h-30.1V53.8h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C219.02,90.23,215.79,91.07,212.25,91.07z M187.14,86.45h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89h-25.11V86.45z"
          />
        </g>
         
        <g
          id="shadow"
        >
          <path
            class="st0"
            d="M372.24,198.08c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.7,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V92.78c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C422.82,188.61,398.83,198.08,372.24,198.08z M372.01,18.77
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V95.3h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C417.72,27.33,401.35,18.77,372.01,18.77z"
          />
        </g>
         
        <g>
          <path
            class="st0"
            d="M547.26,193.05h-80.01V17.92h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C562.75,191.64,555.15,193.05,547.26,193.05z M472.25,188.43
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.88-20.83-3.88h-75.01V188.43z M547.26,156.85h-40.82V54.12h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C554.06,156.05,550.82,156.85,547.26,156.85z M511.44,152.23h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78h-35.82V152.23z"
          />
        </g>
      </g>
       
      <g>
        <g>
          <path
            class="st1"
            d="M133.81,183.26H98.98l-25.13-32.93l-25.05,32.93h-34.8l42.47-55.81L13.74,71.21h34.75l25.35,33.34
			l24.97-33.34h34.58l-42.17,56.24L133.81,183.26z M101.01,178.8h24.01l-39.2-51.32l38.87-51.84h-23.82l-27.03,36.06L46.46,75.63
			H22.5l39.36,51.82L22.78,178.8h23.98l27.08-35.57L101.01,178.8z"
          />
        </g>
         
        <g>
          <path
            class="st1"
            d="M294.25,183.95H243.6L204,118.66h-6.81v65.29h-44.19V8.81h69.29c7.93,0,15.57,1.46,22.92,4.4
			c7.02,2.81,13.22,6.77,18.61,11.85c5.35,5.07,9.49,10.88,12.43,17.44c3.04,6.8,4.56,13.88,4.56,21.22
			c0,7.36-1.52,14.45-4.56,21.25c-2.94,6.55-7.08,12.37-12.43,17.44c-3.98,3.76-8.41,6.9-13.3,9.43L294.25,183.95z M246.51,179.32
			h39.22l-42.1-69.4l2.34-1.07c5.33-2.47,10.1-5.7,14.3-9.69c4.89-4.65,8.68-9.97,11.37-15.96c2.79-6.25,4.18-12.74,4.18-19.49
			c0-6.73-1.4-13.21-4.18-19.46c-2.69-5.99-6.47-11.31-11.37-15.96c-4.93-4.66-10.61-8.28-17.02-10.84
			c-6.73-2.68-13.71-4.02-20.95-4.02h-64.3v165.88h34.19v-65.29h14.71L246.51,179.32z M222.3,82.37h-30.1V45.1h30.1
			c3.54,0,6.77,0.84,9.7,2.52c2.92,1.68,5.26,3.93,7.01,6.75c1.75,2.82,2.62,5.94,2.62,9.35c0,3.43-0.87,6.56-2.62,9.38
			c-1.75,2.82-4.09,5.07-7.01,6.75C229.08,81.53,225.84,82.37,222.3,82.37z M197.2,77.75h25.11c2.62,0,5.02-0.63,7.2-1.89
			c2.18-1.26,3.91-2.95,5.2-5.07c1.29-2.12,1.94-4.47,1.94-7.06c0-2.56-0.65-4.91-1.94-7.03c-1.29-2.12-3.02-3.81-5.2-5.07
			c-2.18-1.26-4.57-1.89-7.2-1.89H197.2V77.75z"
          />
        </g>
         
        <g>
          <path
            class="st1"
            d="M382.3,189.38c-25.07,0-47.69-9.28-63.69-26.14c-15.8-16.64-24.49-39.92-24.49-65.54v-0.5
			c0-24.76,8.84-47.85,24.89-65.03c16.36-17.5,38.76-27.14,63.06-27.14c27.47,0,46.51,7.08,65.71,24.42
			c0.98,0.88,1.11,2.37,0.3,3.41l-22.58,28.98c-0.43,0.55-1.06,0.9-1.75,0.96c-0.69,0.07-1.38-0.16-1.9-0.62
			c-12.11-10.74-22.69-16.95-40.94-16.95c-24.42,0-44.28,23.09-44.28,51.48v0.5c0,30.4,19.7,52.47,46.84,52.47
			c12.13,0,22.9-3.16,31.24-9.15v-20.99h-33.57c-1.39,0-2.51-1.13-2.51-2.51V84.08c0-1.39,1.13-2.51,2.51-2.51h70.77
			c1.39,0,2.51,1.13,2.51,2.51v75.29c0,0.71-0.3,1.39-0.83,1.87C432.88,179.91,408.89,189.38,382.3,189.38z M382.07,10.07
			c-46.5,0-82.92,38.28-82.92,87.14v0.5c0,51.02,34.19,86.65,83.16,86.65c24.96,0,47.52-8.78,67.09-26.1V86.6h-65.74v27.91h33.57
			c1.39,0,2.51,1.13,2.51,2.51v24.77c0,0.78-0.37,1.52-0.99,2c-9.35,7.14-21.55,10.92-35.28,10.92c-30.05,0-51.87-24.18-51.87-57.5
			v-0.5c0-31.16,22.12-56.51,49.31-56.51c18.7,0,30.3,6.25,42.25,16.46l19.5-25.02C427.77,18.63,411.41,10.07,382.07,10.07z"
          />
        </g>
         
        <g>
          <path
            class="st1"
            d="M557.32,184.35h-80.01V9.22h80.01c7.89,0,15.49,1.42,22.8,4.25c7,2.74,13.19,6.58,18.58,11.54
			c5.39,4.99,9.58,10.72,12.55,17.18c3.08,6.73,4.62,13.73,4.62,21.02c0,7.29-1.54,14.3-4.62,21.05c-2.08,4.53-4.78,8.7-8.09,12.52
			c3.31,3.84,6.01,8.02,8.09,12.55c3.08,6.75,4.62,13.76,4.62,21.05c0,7.29-1.54,14.29-4.62,21.02
			c-2.98,6.46-7.16,12.18-12.55,17.18c-5.39,4.95-11.59,8.8-18.58,11.54C572.8,182.94,565.21,184.35,557.32,184.35z M482.31,179.73
			h75.01c7.22,0,14.17-1.3,20.83-3.9c6.41-2.49,12.08-6,17.02-10.55c4.93-4.55,8.76-9.77,11.49-15.67
			c2.81-6.17,4.22-12.58,4.22-19.23c0-6.67-1.41-13.08-4.22-19.23c-2.17-4.7-5.04-8.98-8.62-12.84l-1.41-1.53l1.41-1.5
			c3.58-3.86,6.45-8.13,8.62-12.84c2.81-6.15,4.22-12.56,4.22-19.23c0-6.65-1.41-13.06-4.22-19.23c-2.73-5.9-6.56-11.12-11.49-15.67
			c-4.93-4.55-10.61-8.08-17.02-10.58c-6.66-2.58-13.61-3.87-20.83-3.87h-75.01V179.73z M557.32,148.15H516.5V45.42h40.82
			c3.56,0,6.8,0.8,9.73,2.4c2.92,1.6,5.26,3.75,7.01,6.45c1.75,2.7,2.62,5.68,2.62,8.94c0,3.16-0.81,6.05-2.44,8.67
			c-1.62,2.62-3.81,4.74-6.56,6.36c-2.75,1.62-5.85,2.53-9.31,2.75c-3.66,0.23-6.67,1.12-9.03,2.67s-4.09,3.5-5.21,5.85
			c-1.12,2.35-1.69,4.78-1.69,7.29c0,2.49,0.56,4.91,1.69,7.26c1.12,2.35,2.86,4.3,5.21,5.85c2.35,1.55,5.36,2.44,9.03,2.67
			c3.46,0.21,6.56,1.13,9.31,2.75c2.75,1.62,4.93,3.74,6.56,6.36c1.62,2.62,2.44,5.51,2.44,8.67c0,3.26-0.88,6.24-2.62,8.93
			c-1.75,2.7-4.09,4.85-7.01,6.45C564.12,147.35,560.88,148.15,557.32,148.15z M521.5,143.53h35.82c2.64,0,5.05-0.59,7.23-1.78
			s3.91-2.78,5.2-4.77c1.29-2,1.94-4.2,1.94-6.61c0-2.33-0.6-4.47-1.81-6.42c-1.21-1.95-2.83-3.52-4.86-4.71
			c-2.03-1.19-4.33-1.87-6.89-2.02c-6.47-0.37-11.65-2.64-15.52-6.82c-3.39-3.82-5.11-8.35-5.15-13.59c0-5.11,1.72-9.65,5.15-13.62
			c3.87-4.18,9.05-6.46,15.52-6.82c2.56-0.15,4.86-0.83,6.89-2.02c2.03-1.19,3.65-2.77,4.86-4.71c1.21-1.95,1.81-4.09,1.81-6.42
			c0-2.41-0.65-4.61-1.94-6.61c-1.29-2-3.02-3.59-5.2-4.77c-2.18-1.19-4.58-1.78-7.23-1.78H521.5V143.53z"
          />
        </g>
      </g>
    </svg>
  </div>
</section>
`;
